--- a/rust/mr/Cargo.toml
+++ b/rust/mr/Cargo.toml
@@ -15,10 +15,13 @@ path = "src/main/mrcoordinator.rs"
 
 [dependencies]
 bytes = "1.4.0"
-prost = "0.11.9"
-prost-derive = "0.11.9"
 tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
 tonic = { version = "0.9.2", features = ["codegen"] }
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0.96"
+futures-core = "0.3.28"
+futures-util = "0.3.28"
+prost = "0.11.9"
 
 [build-dependencies]
-prost-build = "0.11.9"
+tonic-build = "0.9"
