--- a/rust/mr/Cargo.toml
+++ b/rust/mr/Cargo.toml
@@ -22,6 +22,7 @@ serde_json = "1.0.96"
 futures-core = "0.3.28"
 futures-util = "0.3.28"
 prost = "0.11.9"
+libloading = "0.8.0"
 
 [build-dependencies]
 tonic-build = "0.9"
