--- a/rust/mr/Cargo.toml
+++ b/rust/mr/Cargo.toml
@@ -23,6 +23,7 @@ futures-core = "0.3.28"
 futures-util = "0.3.28"
 prost = "0.11.9"
 libloading = "0.8.0"
+mr-types = { path = "../mr-types" }
 
 [build-dependencies]
 tonic-build = "0.9"
